fix: update favicon and social preview to use custom branding, remove all Lovable image references

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         }
       })();
     </script>
+    <link rel="icon" type="image/x-icon" href="/public/favicon.ico" />
+    <link rel="shortcut icon" href="/public/favicon.ico" />
+    <meta property="og:title" content="echo-spend-easy" />
+    <meta property="og:description" content="AI-powered personal finance dashboard with cloud sync and analytics." />
+    <meta property="og:image" content="/public/placeholder.svg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="echo-spend-easy" />
+    <meta name="twitter:description" content="AI-powered personal finance dashboard with cloud sync and analytics." />
+    <meta name="twitter:image" content="/public/placeholder.svg" />
   </head>
 
   <body>
