chore: Remove all Lovable branding, meta tags, and dependencies; fix month order in Comparative Analysis

--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>echo-spend-easy</title>
-    <!-- Removed Lovable meta tags and branding: description, author, og:description, og:image, twitter:site, twitter:image -->
+    <!-- Removed Lovable meta tags and branding -->
+    <!-- <meta name="description" content="Lovable Generated Project" /> -->
+    <!-- <meta name="author" content="Lovable" /> -->
+
+    <!-- <meta property="og:title" content="echo-spend-easy" /> -->
+    <!-- <meta property="og:description" content="Lovable Generated Project" /> -->
+    <!-- <meta property="og:type" content="website" /> -->
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+
+    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
+    <!-- <meta name="twitter:site" content="@lovable_dev" /> -->
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+    
     <!-- Dark mode initialization script -->
     <script>
       // Set dark mode as default before React loads to prevent flash
@@ -21,15 +33,6 @@
         }
       })();
     </script>
-    <link rel="icon" type="image/x-icon" href="/public/favicon.ico" />
-    <link rel="shortcut icon" href="/public/favicon.ico" />
-    <meta property="og:title" content="echo-spend-easy" />
-    <meta property="og:description" content="AI-powered personal finance dashboard with cloud sync and analytics." />
-    <meta property="og:image" content="/public/placeholder.svg" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="echo-spend-easy" />
-    <meta name="twitter:description" content="AI-powered personal finance dashboard with cloud sync and analytics." />
-    <meta name="twitter:image" content="/public/placeholder.svg" />
   </head>
 
   <body>
